# zip-zap-zop

./: .dockerignore  Dockerfile  README.md  fly.toml
client/: README.md  eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
client/src/: app.html
client/src/lib/: Button.svelte  env.ts
client/src/lib/components/: Link.svelte  ZipZapZop.svelte
client/src/lib/components/ui/: Button.svelte
client/src/lib/components/zzz/: ActionButton.svelte  Deadline.svelte  Draggable.svelte  Droppable.svelte  ZipZapZop.svelte
client/src/lib/models/: game.ts  id.ts  index.ts  lobby.ts
client/src/lib/utils/: assert.ts  validate.ts  websocket.ts
client/src/lib/zzz/: game.svelte.ts  lobby.svelte.ts  state.svelte.ts
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/(menus)/: +layout.svelte
client/src/routes/(menus)/create/: +page.svelte
client/src/routes/(menus)/help/: +page.svelte
client/src/routes/(menus)/lobbies/: +page.svelte
client/src/routes/(menus)/lobby/[lid]/: +page.svelte
client/src/routes/(menus)/lobby/[lid]/game/: +page@.svelte
client/src/routes/create/: +page.svelte
client/src/routes/help/: +page.svelte
client/src/routes/join/: +page.svelte  +page.ts
docs/: SPEC.md
server/: Cargo.toml  README.md
server/src/: main.rs  router.rs
server/src/actor/: game.rs  io.rs  lobby.rs  mod.rs
server/src/actor/lobby/: guest.rs  host.rs  mod.rs
server/src/event/: game.rs  lobby.rs  mod.rs  player.rs
server/src/game/: lobby.rs  mod.rs  player.rs  tests.rs
server/src/router/: create.rs  join.rs  lobbies.rs  lobby.rs  mod.rs  play.rs
server/src/zzz/: mod.rs  tests.rs
