[package]
name = "zip-zap-zop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
http-body-util = "0.1.2"
hyper-util = "0.1.9"
slab = "0.4.9"
tracing = "0.1.40"

[dependencies.arcstr]
version = "1.2"
default-features = false

[dependencies.fastwebsockets]
version = "0.8.0"
features = ["upgrade"]

[dependencies.hyper]
version = "1.5"
features = ["server", "http1"]

[dependencies.tokio]
version = "1.41"
features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"]
