[package]
name = "zip-zap-zop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
http-body-util = "0.1.2"
hyper-util = "0.1.9"
rmp-serde = "1.3"
tracing = "0.1.40"

[dependencies.arcstr]
version = "1.2"
default-features = false
features = ["serde"]

[dependencies.fastwebsockets]
version = "0.8.0"
features = ["upgrade", "unstable-split"]

[dependencies.hyper]
version = "1.5"
features = ["server", "http1"]

[dependencies.jiff]
version = "0.1.14"
default-features = false
features = ["std", "serde"]

[dependencies.serde]
version = "1.0.213"
default-features = false
features = ["derive"]

[dependencies.slab]
version = "0.4.9"
features = ["serde"]

[dependencies.tracing-subscriber]
version = "0.3.18"
default-features = false
features = ["ansi", "fmt", "smallvec"]

[dependencies.triomphe]
version = "0.1.14"
default-features = false

[dependencies.tokio]
version = "1.41"
features = ["rt-multi-thread", "io-util", "macros", "net", "time", "sync", "signal"]
